implement inner pages

--- a/src/app/features/landing/terms/terms.component.html
+++ b/src/app/features/landing/terms/terms.component.html
@@ -1,1 +1,324 @@
-<p>terms works!</p>
+<!DOCTYPE html>
+<!-- saved from url=(0067)https://dex-rtl.html -->
+<html lang="ar" dir="rtl"
+    class=" sizes customelements history pointerevents postmessage webgl websockets cssanimations csscolumns csscolumns-width csscolumns-span csscolumns-fill csscolumns-gap csscolumns-rule csscolumns-rulecolor csscolumns-rulestyle csscolumns-rulewidth csscolumns-breakbefore csscolumns-breakafter csscolumns-breakinside flexbox picture srcset webworkers">
+
+
+<body data-new-gr-c-s-check-loaded="14.1094.0" data-gr-ext-installed="">
+
+    <!--====== PRELOADER PART START ======-->
+
+    <div class="loader-wrap" style="display: none;">
+        <div class="preloader">
+            <div class="preloader-close">Preloader Close</div>
+        </div>
+        <div class="layer layer-one"><span class="overlay"
+                style="left: 100%; transform: translate3d(0px, 0px, 0px);"></span></div>
+        <div class="layer layer-two"><span class="overlay"
+                style="left: 100%; transform: translate3d(0px, 0px, 0px);"></span></div>
+        <div class="layer layer-three"><span class="overlay"
+                style="left: 100%; transform: translate3d(0px, 0px, 0px);"></span></div>
+    </div>
+
+    <!--====== PRELOADER PART ENDS ======-->
+
+    <!--====== OFFCANVAS MENU PART START ======-->
+
+    <div class="off_canvars_overlay">
+
+    </div>
+    <div class="offcanvas_menu">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="offcanvas_menu_wrapper">
+                        <div class="canvas_close">
+                            <a href="javascript:void(0)"><i class="muri-close"></i></a>
+                        </div>
+                        <div class="offcanvas-brand text-center mb-40">
+                            <img src="assets/image/logo.png" alt="" class="logo">
+                        </div>
+                        <div id="menu" class="text-right">
+                            <ul class="offcanvas_main_menu">
+                                <li class="menu-item-has-children active">
+                                    <a href="/">الرئيسية</a>
+                                </li>
+                                <li class="menu-item-has-children active">
+                                    <a href="/terms">حول موري</a>
+                                </li>
+                                <li class="menu-item-has-children active">
+                                    <a href="/terms">المميزات</a>
+                                </li>
+                                <li class="menu-item-has-children active">
+                                    <a href="/terms">الأسئلة الشائعة</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="offcanvas-social">
+                            <ul class="text-center justify-content-center">
+                                <li><img src="assets/image/linkedin.svg" alt="" class="pr-12"></li>
+                                <li><img src="assets/image/twitter.svg" alt="" class="pr-12"></li>
+                                <li><img src="assets/image/facebok.svg" alt="" class="pr-12"></li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--====== OFFCANVAS MENU PART ENDS ======-->
+
+
+
+
+    <!--====== PART START ======-->
+
+    <app-navbar></app-navbar>
+
+    <!--====== PART ENDS ======-->
+
+    <!--====== terms start ======-->
+
+    <div class="terms container pt-12">
+
+        <h3 class="justify-content-center d-flex pb-8 pt-56"> ضوابط وشروط وأحكام المستخدم لمنصة موري </h3>
+        <p class="pt-12">تمثل هذه الضوابط والشروط اتفاق رسمي "عقد" بين منصة موري والعملاء المستخدمين لمنصة موري، والذي
+            هو عبارة عن منصة إلكترونية تسمح للسائقين بتقديم خدمات المواصلات للعملاء والتوصيل من وإلى منازلهم أو في
+            المواقع التي يتم تحديدها مسبقاً من العملاء، حيث يقوم "موري" بإتاحة الفرصة للعميل لاختيار السائق المناسب
+            للقيام بتقديم الخدمة.
+            إن أي استخدام من قبلك للخدمات التي توفرها منصة موري يُعد موافقة منك على هذا العقد وأحكامه، وتبعاً لذلك يجب
+            عليك عدم استخدام المنصة في حال لم تكن موافقاً على الأحكام والشروط الواردة في هذا العقد.
+            تحتفظ موري بحق تعديل أو تغيير هذه الأحكام والشروط دون إخطار مسبق، ويكون من مسؤوليتك كمستخدم للمنصة مراجعة
+            ضوابط وشروط الاستخدام بشكل دوري لمعرفة التحديثات التي تطرأ على الأحكام والشروط، من خلال الرابط
+            (http://mori.html) كما نأمل مراجعة سياسة الخصوصية لدينا لمعرفة المزيد حول كيفية استخدام موري للمعلومات التي
+            تقدم لنا من قبل مستخدمي المنصة. أحقية الحصول على الخدمات
+
+        </p>
+
+        <h5 class="pt-24">أنت تقر وتضمن التالي:</h5>
+        <ol class="pt-8">
+            <li class="pt-8">
+                أنه لم يسبق أن تم تعطيل استخدامك لخدمات موري أو منعك من استخدامها في أي وقت من الأوقات </li>
+            <li class="pt-8">
+                أنك لست أحد منافسين "موري"، كما أنك لا تقدم أي منتج منافس للخدمات المقدمة من موري.
+            </li>
+            <li class="pt-8">
+                أنك تتمتع بكامل القوة والسلطة للتعاقد وأنك بذلك لن تكون منتهكاً لأي قانون أو عقد، وأنه لا يوجد عليك أي
+                سوابق قضائية أو أوامر قبض أو مطالبات لدى الجهات الأمنية.
+            </li>
+        </ol>
+
+        <h5 class="pt-32">أولاً: التعدات والضمانات:</h5>
+        <h6 class="pt-12">أنت تقر وتضمن بأنك :</h6>
+        <ul class="pt-12">
+            <li class="pt-8">
+                تمتثل لكافة القوانين واللوائح المعمول بها في المملكة العربية السعودية. </li>
+            <li class="pt-8">
+                تقدم معلومات صحيحة ودقيقة إلى موري وتقوم بتحديثها بشكل دوري. </li>
+            <li class="pt-8">
+                تراجع الإشعارات التي يتم إرسالها من خلال موري فيما يتعلق باستخدامكم للخدمات المقدمة من منصة موري. </li>
+            <li class="pt-8">تستخدم الخدمة أو المنصة لتقديم خدمات نقل مشروعة فقط، ولن تستخدم الخدمة لنقل أو شراء أو
+                استلام أي مواد غير قانونية أو بهدف الاحتيال.
+            </li>
+            <li class="pt-8">
+                لن تستخدم الخدمة أو المنصة للتسبب بإيذاء أو مضايقة أو إزعاج أحد ما. </li>
+            <li class="pt-8">
+                توافق على تبادل المعلومات بين الشركات داخل المنصة فيما يخص عملياتك المنفذة وتقييم التعاملات معك </li>
+            <li class="pt-8">
+                لن تعرقل التشغيل السليم لمنصة موري </li>
+            <li class="pt-8">
+                لن تحاول إلحاق الضرر بالخدمة أو المنصة بأي شكل من الأشكال. </li>
+            <li class="pt-8">سوف تحافظ على كلمة المرور لحسابك أو أي وسيلة تعريف نقدمها لك وتتيح الدخول إلى حسابك بشكلٍ
+                آمن وسري </li>
+            <li class="pt-8">سوف تحافظ على كلمة المرور لحسابك أو أي وسيلة تعريف نقدمها لك وتتيح الدخول إلى حسابك بشكلٍ
+                آمن وسري
+            </li>
+            <li class="pt-8">سوف تقدم لنا كافة الدلائل التي تثبت هويتك وفقاً لتقدير موري الخاص
+            </li>
+            <li class="pt-8">يحق لـ موري رفض تقديم الخدمة أو استخدام المنصة دون إبداء أسباب.
+            </li>
+        </ul>
+
+        <h5 class="pt-32"> ثانياً: نطاق الترخيص:</h5>
+        <h6 class="pt-12">تمنحك موري ترخيص غير حصري، وغير قابل للتحويل، وغير قابل للتنازل، وغير قابل للترخيص من الباطن
+            وغير قابل للإلغاء؛ وذلك للحصول على خدماتنا واستخدامها فقط للغرض الشخصي (ليس لأي أغراض تجارية على سبيل المثال
+            لا الحصر) وفقاً لهذا العقد، لذا يجب عليك:</h6>
+        <ol class="pt-12">
+            <li class="pt-8">
+                عدم إتاحة الخدمات أو تأجير، أو استئجار أو تخصيص أو إعادة بيع، أو توزيع أو الترخيص من الباطن لهذه الخدمات
+                إلى أي طرف ثالث.
+            </li>
+            <li class="pt-8">عدم تعديل، أو اجتزاء، أو ترجمة، أو تلخيص، أو إنشاء عمل فرعي يقوم على فكرة أو تنفيذ هندسة
+                عكسية لتصميم منصة موري أو خلاف ذلك من تحديد أو محاولة تحديد أو محاولة الوصول إلى شفرة المصدر أو التصميم
+                الداخلي للخدمات أو أي نص، أو الوسائط المتعددة (صور، صوتيات، ملفات فيديو)، أو البيانات أو غيرها من
+                المعلومات التي تقدمها موري أو الطرف الثالث من مقدمي الخدمة.</li>
+            <li class="pt-8">
+                عدم حذف، أو تغيير، أو غير ذلك من التعديلات على أي حق من حقوق النشر أو غيرها من الإخطارات الرسمية الواردة
+                في الخدمات.
+            </li>
+            <li class="pt-8">
+                عدم تعمد نقل، أو توزيع الخدمات، أو السماح بتحميل الخدمات للاستخدام بخلاف ما هو محدد هنا.
+            </li>
+            <li class="pt-8">
+                عدم السماح بمشاركة اسم المستخدم/ أو كلمة المرور أو غيرها من ممكنات الوصول إلى خدمات موري.
+            </li>
+            <li class="pt-8"> جزء من سياسة خدمات النقل الخاصة بخدمة موري يحظر على المستخدمين والسائقين توصيل أو شراء
+                أو إرسال أو استلام الفئات التالية من المواد والمنتجات وما يتعلق بها، ويتوجب عليك السماح للسائق بفتح
+                المنتجات التي سيوصلها للتأكد من سلامتها وموافقتها للشروط.</li>
+        </ol>
+
+        <h5 class="pt-32"> ثالثاً: الفئات أمثلة للمنتجات والأصناف:</h5>
+        <ol class="pt-12">
+            <li class="pt-8">
+                الكحول المشروبات الروحية والمسكرة، النبيذ، الشمبانيا، البيرة وغيرها.
+            </li>
+            <li class="pt-8">الحيوانات والأجناس المحظورة، أجزاء الحيوانات، الدماء أو السوائل الأخرى، الأعشاب الضارة،
+                البذور المحظورة، النبات وأي مواد عضوية أخرى (تشمل المشتقات الإنتاجية) المعرضة لخطر الانقراض، أو التي
+                يمنع الاتجار فيها بموجب القانون.
+            </li>
+            <li class="pt-8"> المواد الإباحية أو تلك التي من الممكن أن تشكل استغلالاً جنسياً للأطفال. </li>
+            <li class="pt-8">
+                المواد والتطبيقات المحمية بحقوق ملكية النسخ غير القانونية من الكتب والموسيقى والأفلام وأي مواد أخرى
+                مرخصة ومحمية بما في ذلك النسخ التي تتعدى على حقوق الملكية، والنسخ غير القانونية من التطبيقات والبرامج
+                وألعاب الفيديو، وأي مواد أخرى مرخصة ومحمية، مثل: التطبيقات الأصلية أو البرامج الحزمية أو المنتجات الأخرى
+                التي تمكّن من إرسال رسائل مجهولة المصدر إلى البريد الإلكتروني
+            </li>
+            <li class="pt-8">
+                السلع المقلدة وغير القانونية السلع أو التصاميم المقلدة، المواد غير الموقعة من المشاهير والتي تحتاج في
+                العادة إلى مثل هذا التوقيع، التوقيعات المزورة، العملات والطوابع وغيرها من السلع التي قد تكون غير
+                قانونية.
+            </li>
+            <li class="pt-8"> الأجهزة والآلات المستخدمة في فك أو اختراق الحماية التقنية أو شرائح أو أجهزة أخرى تستخدم
+                لتجاوز الحماية التقنية على الأجهزة الرقيمة، بما في ذلك أجهزة فك شفرات هواتف الآيفون.
+            </li>
+            <li class="pt-8">
+                المخدرات ومعداتها، المواد المحظورة، والأدوية غير القانونية ومعدات التحضير، بما في ذلك الحبوب العشبية
+                مثل السالفيا والفطر السحري والمواد التي تروج لاستخدام مثل هذه المنتجات، أو المواد والنباتات والأعشاب
+                التي يمكن استعمالها بطريقة تقتضي هضمها أو استنشاقها او استخلاص أي مواد غير قانونية منها، وتؤدي إلى أثر
+                المخدرات أو المواد غير القانونية، أو التي تدعي تحقيق فوائد صحية دون إثبات أو برهان.
+            </li>
+            <li class="pt-8">
+                الألعاب والقمار تذاكر اليانصيب والمراهنات الرياضية، وعضويات مواقع القمار على الشبكة وأي محتوى متعلق
+                بذلك.
+            </li>
+            <li class="pt-8">
+                مواد القرصنة الإلكترونية، والأدلة والتوجيهات والمعلومات والمتطلبات التي تخالف القانون من خلال التخريب
+                أو السماح بالوصول غير القانوني إلى التطبيقات والبرامج والأجهزة الخادمة ومواقع الإنترنت أو أي ممتلكات
+                أخرى محمية.
+            </li>
+            <li class="pt-8">
+                الأعضاء البشرية أو أي أجزاء من الجسم، والسوائل والخلايا الجذعية والأجنة. </li>
+            <li class="pt-8">
+                السلع غير القانونية والمسروقة، المواد والمنتجات والمعلومات التي تروج لسلع غير قانونية أو تمكن من
+                تنفيذ أفعال غير قانونية، والسلع التي لا تملكها أو ليس لك الحق في بيعها، والسلع التي يتم إنتاجها بالتعدي
+                على حقوق ملكية لجهات أخرى، والسلع المهربة والسلع التي تخالف أنظمة الاستيراد والتصدير والديباجات،
+                والسيارات الخاضعة لقيود النقل، والسلع المسجلة في السجلات العامة (مثل العقارات) والتي يتطلب نقلها إجراءات
+                رسمية لا يمكن إنجازها على الشبكة، وتكون أنت والعميل مسؤولين مسؤولية كاملة عن التحقق من أن جميع المواد
+                التي تقومون ببيعها قانونية ومصرح بها.
+            </li>
+            <li class="pt-8">
+                معدات الاتصالات غير القانونية، والأجهزة المعدة لالتقاط إشارات الأقمار الصناعية والكابلات مجاناً،
+                وأجهزة فك شفرة البث الكابلي، وبطاقات التشفير وأجهزة برمجة بطاقات التشفير، والمعدات والمنتجات غير
+                القانونية التي تستخدم في تعديل الهواتف الخليوية، وغيرها من المعدات التي تُعد غير قانونية بموجب أنظمة
+                هيئة الاتصالات أو أي جهة منظمة في البلد التي تعرض فيها تلك السلع.
+            </li>
+            <li class="pt-8">
+                الأدوية الخارقة والعلاجات والأدوية غير المثبتة أو المواد التي يتم تسويقها على أنها علاج
+                سريع وناجع للمشكلات الصحية.
+            </li>
+            <li class="pt-8">السلع غير اللائقة والمواد غير الأخلاقية، والمنتجات أو أي مواد أخرى تعمل على:
+                <ul class="pt-8">
+                    <li class="pt-8">تشويه السمعة والتشهير بأي شخص أو مجموعة من الأشخاص على أساس العرق أو البلد أو الدين
+                        أو النوع أو أي عامل آخر.
+                    </li>
+                    <li class="pt-8">
+                        تشويه السمعة والتشهير بأي شخص أو مجموعة أشخاص محمية من التشهير وتشويه السمعة بموجب القانون
+                        السائد (مثل الحماية المتوفرة للأسر الحاكمة في بعض المناطق)
+                    </li>
+                    <li class="pt-8">
+                        التحريض على أو تشجيع الأفعال العنيفة. </li>
+                    <li class="pt-8">
+                        الترويج للتعصب والكراهية.
+                    </li>
+                    <li class="pt-8">
+                        الترويج للانتماء إلى المجموعات الإرهابية أو أي منظمات أخرى محظورة بموجب القانون.
+                    </li>
+                    <li>
+                        الترويج للنظريات التعديلية المحددة بموجب القانون.
+                    </li >
+                    <li class="pt-8">
+                        تنافي الضوابط الأخلاقية السائدة.
+                    </li>
+                </ul>
+            </li>
+            <li class="pt-8">السلع العدوانية والإجرامية المشاهد والصور والمواد الإجرامية مثل المتعلقات الشخصية
+                المرتبطة بالجرائم أو الأفعال الإجرامية.
+            </li>
+            <li class="pt-8"> المواد الثمينة البيع بكميات كبيرة للمعادن والأحجار النادرة أو الثمينة.
+            </li>
+            <li class="pt-8">
+                المواد الثقافية والمشغولات اليدوية المحمية المواد التي يشملها ميثاق اليونسكو لعام 1970م بخصوص وسائل
+                منع وحماية الاستيراد والتصدير والنقل غير المشروع لملكية الممتلكات الثقافية أو الممنوع بيعها أو تصديرها
+                أو نقل ملكيتها بموجب القانون، المشغولات اليدوية والتكوينات الكهفية والمواد المتعلقة بالمدافن والمحمية
+                بموجب القانون الفيدرالي مثل قانون حماية الموارد الكهفية لعام 1988م وقانون حماية المدافن الأمريكية.
+            </li>
+            <li class="pt-8">
+                أجهزة الألعاب النارية، والمواد الخطرة والألعاب النارية والسلع المتعلقة بها؛ الموجودة في الأسواق التي
+                تحتوي على: مواد سامة، أقابلة للاشتعال أو مشعة، ومواد مثل البارود والمواد المتفجرة والبنزين وعبوات
+                البروبان.
+            </li>
+            <li class="pt-8">
+                السلع الخاضعة لضوابط معينة، مثل: الأكياس الهوائية، البطاريات التي تحتوي على الزئبق، الفريون ومواد
+                التبريد المماثلة، المذيبات الكيميائية والصناعية، العمليات الطبية، لوحات السيارات، ديباجات الشرطة ومعدات
+                سلطات تطبيق القانون، مثل: أجهزة فتح الأقفال، الأجهزة الطبية، والمبيدات الحشرية، ومعدات اللياقة والمحفزات
+                الكهربائية، المواد المسترجعة، معدات التفتيش والمراقبة المستخدمة بشكل أساسي للتنصت على المكالمات الشفهية
+                أو الإلكترونية بشكل غير قانوني، أو التمكين من التنصت غير القانوني على الأشخاص وتسجيل مكالماتهم، السلع
+                الخاضعة للرقابة من قبل الحكومة أو أي سلطات أخرى.
+            </li>
+            <li class="pt-8">
+                أجهزة السلطات المرورية أجهزة التشويش على الرادار، أغطية لوحات السيارات، أجهزة تغيير إشارات المرور وغيرها
+                من المنتجات ذات الصلة.
+            </li>
+            <li class="pt-8"> الأسلحة، والذخيرة وأي مواد أخرى تشمل، دون حصر، الأسلحة والسكاكين المخفاة وصعبة الكشف
+                والأسلحة التي تأخذ شكل قطع فنية، وكاتمات الصوت، وخزائن الذخيرة والأسلحة الرشاشة الخفيفة، والغاز المسيل
+                للدموع.
+            </li>
+            <li class="pt-8">
+                البيع الإجمالي للعملات المخفضة، أو تداول العملات، والعملات المدعومة بالمعادن الثمينة. </li>
+            <li class="pt-8">
+                التوصيل للأطفال في سن الدراسة الابتدائية أو المتوسطة، أو دون ذلك يكون لدينا الحق في قبول أو رفض تقديم
+                الخدمة لجميع الأطفال دون الثامنة عشرة دون موافقة ولي الأمر، وإضافةً إلى ذلك يكون لدينا الحق في رفض
+                التوصيل إلى أي موقع داخل أو حول المدارس الابتدائية أو المتوسطة.
+            </li>
+            <li class="pt-8"> سوء استخدام المنصة البرمجية، نرفض بشكل كامل أي لغة مسيئة أو سلوك سيء تجاه الشركة و/أو
+                الخدمة التي نقدمها و/أو أيٍ من موظفينا و/أو أي من السائقين العاملين لدينا إذا تقرر بناءً على تقديرنا
+                استخدام أي عميل للغة مسيئة للشركة و/أو الخدمة و/أو الموظفين و/أو السائقين؛ فسيؤدي ذلك إلى إغلاق حساب
+                العميل بشكل نهائي دون رد أي مبالغ مستحقة. ويُعد هذا تهديد بالمقاضاة أو التشهير أو القدح.
+            </li>
+
+        </ol>
+
+        <h5 class="pt-32"> رابعاً: خرق سياسات النقل:</h5>
+        <p class="pt-12"> تحتفظ موري بالحق في السعي لتنفيذ أي معالجات متاحة لأي خرق لسياسة خدمات النقل ويشمل ذلك، دون
+            حصر، الحق في حجب إمكانية الوصول إلى خدمات وبرامج موري.</p>
+
+
+    </div>
+
+    <!--====== terms ENDS ======-->
+
+
+
+
+
+    <!--====== APPIE BACK TO TOP PART ENDS ======-->
+    <app-footer></app-footer>
+    <!--====== APPIE BACK TO TOP PART ENDS ======-->
+
+
+
+
+    <link rel="stylesheet" type="text/css" href="chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/css/blur.css"
+        class="loom-blur-styles">
