--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,75 @@
-<p>footer works!</p>
+    <!--====== APPIE FOOTER PART START ======-->
+  
+
+     <section class="appie-footer-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-widget-info text-right">
+                        <h4 class="title">تواصل معنا</h4>
+                        <ul>
+                            <li><a href="mailto: info&#64;rapidshift.sa"><img src="../../../assets/image/email.svg" alt="" > info&#64;asasit.com</a></li>
+                            <li><a href="https://api.whatsapp.com/send/?phone=%2B966534363917&text&type=phone_number&app_absent=0"><img src="../../../assets/image/whatsapp.svg" alt=""> +966534363917</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-navigation text-right">
+                        <h4 class="title">روابط سريعة</h4>
+                        <ul>
+                            <li><a href="/">الرئيسية</a></li>
+                            <li><a href="terms">الشروط والأحكام</a></li>
+                            <li><a href="privacy"> سياسة الإستخدام</a></li>
+                            <li><a href="aboutUs"> تطبيق موري </a></li>
+    
+                        </ul>
+                    </div>
+                </div>
+                
+                <div class="col-lg-4 col-md-6">
+                    <div class="footer-about-widget text-right">
+                        <div class="logo">
+                            <a href="/"><img src="../../../assets/image/logo.png" alt="" class="logo"></a>
+                        </div>
+                        <p>رحلات مرنة بمواعيد دقيقة من البيت إلى الجامعة</p>
+                        <div class="social mt-30">
+                            <ul style="display: flex;">
+                                <li><a href="https://www.linkedin.com/company/muriapp/" target="_blank" style="display: flex;
+                                    justify-content: center;
+                                    align-items: center;"><img src="../../../assets/image/linkedin.svg" alt=""></a></li>
+                                <li><a href="https://twitter.com/MuriApp" target="_blank" style="display: flex;
+                                    justify-content: center;
+                                    align-items: center;"><img src="../../../assets/image/twitter.svg" alt=""></a></li>
+                                <li><a href="https://www.instagram.com/muri.app/" target="_blank" style="display: flex;
+                                    justify-content: center;
+                                    align-items: center;" ><img src="../../../assets/image/instagram.svg" alt=""></a></li>
+                            </ul>
+                        </div>
+                        <div class="appie-hero-content">
+                           
+                            <ul class="p-0 m-0">
+                                <li class="pt-24 pb-12 pr-0"><a href="https://apps.apple.com/us/app/muri-%D9%85%D9%88%D8%B1%D9%8A-%D9%84%D9%84%D9%86%D9%82%D9%84-%D8%A7%D9%84%D8%AC%D9%85%D8%A7%D8%B9%D9%8A/id1672855064"><i class="muri-apple"></i> التحميل من ابل ستور</a></li>
+                                <li><a class=" " href="https://play.google.com/store/apps/details?id=com.muri.customer"><i class="muri-play "></i> التحميل من جوجل بلاي</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="footer-copyright d-flex align-items-center justify-content-between pt-35">
+                        <div class="text-right">
+                            <a><img src="../../../assets/image/logo2.jpg" alt="" class="logo2"></a>
+                            <p>مشغل بواسطة النقلة السريعة Rapid Shift</p>
+                        
+                        </div>
+                        <div class="copyright-text">
+                            <p>© موري 2023. كل الحقوق محفوظة.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--====== APPIE FOOTER PART ENDS ======-->
