--- a/src/app/features/landing/about-us/about-us.component.html
+++ b/src/app/features/landing/about-us/about-us.component.html
@@ -54,8 +54,8 @@
                             </ul>
                         </div>
                         <div class="d-flex pt-12">
-                            <!-- <a class="main-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSe2h9cl8TtC0XQktI9YQQZjnwAqFRutmUx_RCF3Sc0dw14IFg/viewform"> سجل معنا</a> -->
-                            <a class="main-btn" href="/signup"> سجل معنا</a>
+                            <!-- <a class="main-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSe2h9cl8TtC0XQktI9YQQZjnwAqFRutmUx_RCF3Sc0dw14IFg/viewform"> احجز رحلتك الان</a> -->
+                            <a class="main-btn" href="/signup"> احجز رحلتك الان</a>
                         </div>
                         <div class="offcanvas-social">
                             <ul style="display: flex;" class="text-center justify-content-center">
