--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-lg-4  col-md-7 col-sm-6 col-6 order-2 order-sm-3">
                     <div class="appie-btn-box text-left">
-                        <a class="main-btn mr-30"href="signup"> سجل معنا</a>
+                        <a class="main-btn mr-30"href="signup"> احجز رحلتك الان</a>
                         <div class="toggle-btn ml-30 canvas_open d-lg-none d-block" (click)="openMobileMenu()">
                              
                             <i class="muri-menu h5"></i>
