--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -57,8 +57,8 @@
                             </ul>
                         </div>
                         <div class="d-flex pt-12">
-                            <!-- <a class="main-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSe2h9cl8TtC0XQktI9YQQZjnwAqFRutmUx_RCF3Sc0dw14IFg/viewform"> سجل معنا</a> -->
-                            <a class="main-btn" href="/signup"> سجل معنا</a>
+                            <!-- <a class="main-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSe2h9cl8TtC0XQktI9YQQZjnwAqFRutmUx_RCF3Sc0dw14IFg/viewform"> احجز رحلتك الان</a> -->
+                            <a class="main-btn" href="/signup"> احجز رحلتك الان</a>
                         </div>
                         <div class="offcanvas-social">
                             <ul style="display: flex;" class="text-center justify-content-center">
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-lg-4  col-md-7 col-sm-6 col-6 order-2 order-sm-3">
                     <div class="appie-btn-box text-left">
-                        <a class="main-btn mr-30"href="signup"> سجل معنا</a>
+                        <a class="main-btn mr-30"href="signup"> احجز رحلتك الان</a>
                         <div class="toggle-btn ml-30 canvas_open d-lg-none d-block" (click)="openMobileMenu()">
                              
                             <i class="muri-menu h5"></i>
