لعب في ال landing

--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -148,12 +148,12 @@
                     <div class="appie-hero-content text-right">
                         <span>أهلا بك في موري</span>
                         <h1 class="appie-title">  
-                            رحلات مرنة بمواعيد دقيقة من البيت إلى الجامعة
+                            .رحلات مرنة بمواعيد دقيقة
                             </h1>
                         <p>
-                            موري للنقل التعليمي مختص بنقل الموظفين والطلاب  في رحلات منظمة حسب الجدول
-                             وساعات الدوام بأمان عالٍ وتكلفة مناسبة.
-                              يخدم موري منسوبي الجامعات والمعاهد والمراكز التدريبية والسائقين على حد سواء،
+                            موري للنقل  مختص بنقل الموظفين والطلاب  في رحلات منظمة حسب الاحتياج
+                              بأمان عالٍ وتكلفة مناسبة.
+                              يخدم موري الموظفين و الطلاب والسائقين على حد سواء،
                               ويوفر لهم تطبيق إلكتروني سهل الاستخدام ومزود بخيارات مرنة تتناسب مع احتياجات المستخدم.
                         </p>
                         <ul>
