--- a/src/app/features/landing/about-us/about-us.component.html
+++ b/src/app/features/landing/about-us/about-us.component.html
@@ -148,10 +148,12 @@
                 <div class="col-lg-6 text-right">
                     <div class="appie-traffic-title">
                         <h3 class="title">خدمتنا</h3>
-                        <p>نسعى للربط بين الأمان والتكلفة المعقولة بتوفيرنا لمنصة إلكترونية مرخصة من قبل الهيئة العامة
-                            للنقل TAG لتنظم الرحلات لطالبات الجامعة ومنسوباتها، مما يسمح بتيسير الحياة اليومية لهن
-                            وتخفيف مشاغل جدولة المواصلات مع تقديم فرص عمل للسائقين بمركباتهم الخاصة من خلال جمع عدة
-                            طالبات من المنطقة السكنية نفسها في الرحلات ذات الوجهة الواحدة.</p>
+                        <p>
+                            نسعى للجمع بين الأمان والتكلفة المناسبة عبر منصتنا الإلكترونية المرخَّصة من الهيئة العامة
+                            للنقل (TAG) لنقل الموظفين والطلاب. نهدف إلى تسهيل حياتهم اليومية وتخفيف عبء ترتيب المواصلات،
+                            مع توفير فرص دخل للسائقين بمركباتهم الخاصة من خلال نظام الرحلات المشتركة، حيث يتم جمع الركاب
+                            من نفس المنطقة السكنية المتجهين إلى نفس الوجهة.
+                        </p>
                     </div>
 
                 </div>
@@ -170,9 +172,8 @@
                     <div class="appie-traffic-title">
                         <h3 class="title">عن موري</h3>
                         <p>
-                            يستهدف موري طالبات وموظفات ومنسوبي الجامعة والمعاهد والمراكز التدريبية والسائقين على حد
-                            سواء،
-                            ويوفر لهم تطبيق إلكتروني سهل الاستخدام ومزود بخيارات مرنة تتناسب مع احتياجات المستخدم.
+                            يخدم "موري" الموظفين والطلاب والسائقين على حد سواء، من خلال تطبيق إلكتروني سهل الاستخدام
+                            يوفّر خيارات مرنة تلائم احتياجات كل مستخدم، مما يجعل تجربة التنقّل أكثر راحة وكفاءة.
                         </p>
                     </div>
 
@@ -283,15 +284,15 @@
     <section class="appie-services-2-area pt-90 pb-55" id="service">
         <div class="container">
             <div class="row " style="
-align-items: end;
-text-align: center;
-display: flex;
-justify-content: center;
-">
+                            align-items: end;
+                            text-align: center;
+                            display: flex;
+                            justify-content: center;
+                            ">
                 <div class="col-lg-6 col-md-8">
                     <div class="appie-section-title">
                         <h3 class="appie-title">
-                            كيف استخدم موري؟
+                            كيفية استخدام موري؟ 
                         </h3>
                     </div>
                 </div>
@@ -305,7 +306,7 @@ justify-content: center;
                             <img src="assets/icons/icon1.svg" alt="">
                         </div>
                         <h4 class="title">تحميل تطبيق موري على الهاتف</h4>
-                        <p>من خلال المتجر الخاص بنظام هاتفك، قومي بتحميل تطبيق "موري".</p>
+                        <p>من خلال المتجر الخاص بنظام هاتفك، قم بتحميل تطبيق "موري".</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -317,7 +318,7 @@ justify-content: center;
                             <img src="assets/icons/icon2.svg" alt="">
                         </div>
                         <h4 class="title">إنشاء حساب</h4>
-                        <p>أنشئي حسابك الخاص.</p>
+                        <p>أنشئ حسابك الآن وابدأ رحلتك مع موري </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -328,7 +329,7 @@ justify-content: center;
                             <img src="assets/icons/icon3.svg" alt="">
                         </div>
                         <h4 class="title">تسجيل الدخول إلى الحساب</h4>
-                        <p>سجلي الدخول إلى الحساب الذي قمتي بإنشائه.</p>
+                        <p>سجل الدخول إلى الحساب الذي قمتي بإنشائه.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -338,8 +339,9 @@ justify-content: center;
                         <div class="icon">
                             <img src="assets/icons/icon4.svg" alt="">
                         </div>
-                        <h4 class="title">إختيار الجامعة</h4>
-                        <p>اختاري جامعتك والبوابة التي تفضلين النزول عندها (بإمكانك تغييرها لاحقا).
+                        <h4 class="title">تحديد الوجهة</h4>
+                        <p>
+                            حدّد وجهتك التي ترغب في الوصول إليها (يمكنك التحديث لاحقًا)
                         </p>
                     </div>
                 </div>
@@ -350,8 +352,8 @@ justify-content: center;
                         <div class="icon">
                             <img src="assets/icons/icon5.svg" alt="">
                         </div>
-                        <h4 class="title">إدخال مواعيد الدوام وموقع المنزل </h4>
-                        <p>أدخلي الوقت الذي تودين الوصول فيه إلى الجامعة ووقت الانصراف.</p>
+                        <h4 class="title">تحديد الوقت وموقع المنزل</h4>
+                        <p>أدخل الوقت الذي تود الوصول فيه إلى الوجهة ووقت الانصراف.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -362,7 +364,7 @@ justify-content: center;
                             <img src="assets/icons/icon6.svg" alt="">
                         </div>
                         <h4 class="title">ربط الحساب برقم من ترغبين (اختياري)</h4>
-                        <p>بإمكانك ربط حسابك بأرقام من ترغبين ليتم إشعارهم تلقائيا عند وصولك إلى الجامعة.</p>
+                        <p>يمكنك ربط حسابك برقم شخص من اختيارك ليتم إشعاره تلقائيًا عند وصولك إلى الوجهة.</p>
                     </div>
                 </div>
             </div>
@@ -383,37 +385,4 @@ justify-content: center;
     <div class="back-to-top align-items-center" style="display: none;">
         <a href="muriapp.html" class=""><i class="muri-arrow-up pt-12"></i></a>
     </div>
-
-    <!--====== jquery js ======-->
-    <script src="assets/js/modernizr-3.6.0.min.js"></script>
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-
-    <!--====== Bootstrap js ======-->
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-
-    <!--====== wow js ======-->
-    <script src="assets/js/wow.js"></script>
-
-    <!--====== Slick js ======-->
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/waypoints.min.js"></script>
-
-    <!--====== TweenMax js ======-->
-    <script src="assets/js/TweenMax.min.js"></script>
-
-    <!--====== Slick js ======-->
-    <script src="assets/js/slick.min.js"></script>
-
-    <!--====== Magnific Popup js ======-->
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-
-    <!--====== Main js ======-->
-    <script src="assets/js/main.js"></script>
-
-
-
-
-    <link rel="stylesheet" type="text/css" href="chrome-extension://liecbddmkiiihnedobmlmillhodjkdmb/css/blur.css"
-        class="loom-blur-styles">
 </body>
